Add more push node actions via api
* POST /node/name/.../action/push/disk
* POST /node/name/.../action/push/pkg
* POST /node/name/.../action/push/patch

And use them in o[mx] commands
